--- a/package.json
+++ b/package.json
@@ -6,15 +6,29 @@
   "scripts": {
     "start": "ts-node src",
     "build": "tsc && node dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "jest": "^26.6.3"
+  },
   "devDependencies": {
+    "@types/jest": "^26.0.19",
     "@types/node": "^14.14.19",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testRegex": "\\.test\\.ts$",
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ]
   }
 }
