--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "experimentalDecorators": true,
     "paths": {
       "*": ["node_modules/*"]
-    },
+    }
+  },
   "include": ["./src/**/*"],
-  "exclude": ["node_modules"],
-  "lib": ["es2015", "dom", "dom.iterable"]
+  "exclude": ["node_modules"]
 }
