--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
       "*": ["node_modules/*"]
     }
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./test/**/*"],
   "exclude": ["node_modules"]
 }
